# Cloud_Data_Engineer

./: README.md  index.md  mkdocs.yml
Criacao_de_pacotes/: README.md  setup.py
Criacao_de_pacotes/Hw/: __init__.py
Criacao_de_pacotes/Hw.egg-info/: PKG-INFO  SOURCES.txt
Ecossistema_Hadoop/: README.md  wordcount_hdfs.py
climate_data_pipeline/: README.md  data_transform.duckdb  generate_open_meteo_seed.py  pyproject.toml
climate_data_pipeline/models/: schema.yml
climate_data_pipeline/models/marts/core/: mart_clima_resumo.sql
climate_data_pipeline/models/staging/: stg_clima.sql
climate_data_pipeline/seeds/: clima_diario_capitais_ne.csv
data_transform/: README.md  dbt_project.yml
etl_ANEEL_AWS/: README.md  pyproject.toml
movies-control/: movies_controll.sql
